--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.3.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -33,6 +35,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^8.1.0",
     "react-mentions": "^4.4.10",
@@ -41,7 +44,8 @@
     "react-zoom-pan-pinch": "^3.7.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.6"
+    "use-debounce": "^10.0.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.8.3",
