--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@supabase/supabase-js": "2.30.0",
+    "@supabase/supabase-js": "^2.30.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "concurrently": "^8.2.0",
@@ -30,6 +30,7 @@
     "emoji-picker-react": "^4.15.1",
     "framer-motion": "^10.16.4",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.292.0",
     "maplibre-gl": "^5.13.0",
     "react": "^18.2.0",
@@ -38,6 +39,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^8.1.0",
+    "react-masonry-css": "^1.0.16",
     "react-mentions": "^4.4.10",
     "react-router-dom": "^6.16.0",
     "react-simple-maps": "^3.0.0",
@@ -48,6 +50,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^20.8.3",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.16",
