--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "d3-geo": "^3.1.1",
     "emoji-picker": "^0.0.7",
     "emoji-picker-react": "^4.15.1",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.292.0",
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^8.1.0",
